--- a/BlazorServeApp/appsettings.json
+++ b/BlazorServeApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;user id=root;password=restore@123;Database=dbtest"
+    "DefaultConnection": "Server=localhost;user id=user;password=password;Database=dbname"
   },
   "Logging": {
     "LogLevel": {
